parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ARRAY
    CASE
    CONST
    DOTDOT
    DOWNTO
    FILE
    FUNCTION
    GOTO
    IN
    LABEL
    LBRACKET
    NIL
    NOT
    OF
    PACKED
    PROCEDURE
    RBRACKET
    READ
    REAL
    RECORD
    REPEAT
    SET
    TYPE
    UNTIL
    WITH
    WRITE

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID SEMI declarations BEGIN statements END DOT
Rule 2     declarations -> VAR var_declaration_list
Rule 3     declarations -> empty
Rule 4     var_declaration_list -> var_declaration_list var_declaration
Rule 5     var_declaration_list -> var_declaration
Rule 6     var_declaration -> id_list COLON type SEMI
Rule 7     id_list -> ID
Rule 8     id_list -> ID COMMA id_list
Rule 9     type -> INTEGER
Rule 10    type -> BOOLEAN
Rule 11    type -> STRING
Rule 12    statements -> statements statement
Rule 13    statements -> statement
Rule 14    statement -> assignment_statement
Rule 15    statement -> writeln_statement
Rule 16    statement -> readln_statement
Rule 17    statement -> for_statement
Rule 18    statement -> SEMI
Rule 19    assignment_statement -> ID ASSIGN expression SEMI
Rule 20    writeln_statement -> WRITELN LPAREN writelist RPAREN SEMI
Rule 21    writelist -> writelist COMMA writeitem
Rule 22    writelist -> writeitem
Rule 23    writeitem -> STRING_LITERAL
Rule 24    writeitem -> expression
Rule 25    readln_statement -> READLN LPAREN ID RPAREN SEMI
Rule 26    for_statement -> FOR ID ASSIGN expression TO expression DO statement
Rule 27    expression -> TRUE
Rule 28    expression -> FALSE
Rule 29    expression -> expression AND expression
Rule 30    expression -> expression OR expression
Rule 31    expression -> expression LT expression
Rule 32    expression -> expression LE expression
Rule 33    expression -> expression GT expression
Rule 34    expression -> expression GE expression
Rule 35    expression -> expression EQ expression
Rule 36    expression -> expression NEQ expression
Rule 37    expression -> LPAREN expression RPAREN
Rule 38    expression -> expression DIV expression
Rule 39    expression -> expression MOD expression
Rule 40    statement -> BEGIN statements END
Rule 41    statement -> IF expression THEN statement
Rule 42    statement -> IF expression THEN statement ELSE statement
Rule 43    statement -> WHILE expression DO statement
Rule 44    expression -> expression PLUS expression
Rule 45    expression -> expression MINUS expression
Rule 46    expression -> expression TIMES expression
Rule 47    expression -> expression DIVIDE expression
Rule 48    expression -> NUMBER
Rule 49    expression -> ID
Rule 50    empty -> <empty>

Terminals, with rules where they appear

AND                  : 29
ARRAY                : 
ASSIGN               : 19 26
BEGIN                : 1 40
BOOLEAN              : 10
CASE                 : 
COLON                : 6
COMMA                : 8 21
CONST                : 
DIV                  : 38
DIVIDE               : 47
DO                   : 26 43
DOT                  : 1
DOTDOT               : 
DOWNTO               : 
ELSE                 : 42
END                  : 1 40
EQ                   : 35
FALSE                : 28
FILE                 : 
FOR                  : 26
FUNCTION             : 
GE                   : 34
GOTO                 : 
GT                   : 33
ID                   : 1 7 8 19 25 26 49
IF                   : 41 42
IN                   : 
INTEGER              : 9
LABEL                : 
LBRACKET             : 
LE                   : 32
LPAREN               : 20 25 37
LT                   : 31
MINUS                : 45
MOD                  : 39
NEQ                  : 36
NIL                  : 
NOT                  : 
NUMBER               : 48
OF                   : 
OR                   : 30
PACKED               : 
PLUS                 : 44
PROCEDURE            : 
PROGRAM              : 1
RBRACKET             : 
READ                 : 
READLN               : 25
REAL                 : 
RECORD               : 
REPEAT               : 
RPAREN               : 20 25 37
SEMI                 : 1 6 18 19 20 25
SET                  : 
STRING               : 11
STRING_LITERAL       : 23
THEN                 : 41 42
TIMES                : 46
TO                   : 26
TRUE                 : 27
TYPE                 : 
UNTIL                : 
VAR                  : 2
WHILE                : 43
WITH                 : 
WRITE                : 
WRITELN              : 20
error                : 

Nonterminals, with rules where they appear

assignment_statement : 14
declarations         : 1
empty                : 3
expression           : 19 24 26 26 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 38 38 39 39 41 42 43 44 44 45 45 46 46 47 47
for_statement        : 17
id_list              : 6 8
program              : 0
readln_statement     : 16
statement            : 12 13 26 41 42 42 43
statements           : 1 12 40
type                 : 6
var_declaration      : 4 5
var_declaration_list : 2 4
writeitem            : 21 22
writelist            : 20 21
writeln_statement    : 15

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID SEMI declarations BEGIN statements END DOT

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . ID SEMI declarations BEGIN statements END DOT

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAM ID . SEMI declarations BEGIN statements END DOT

    SEMI            shift and go to state 4


state 4

    (1) program -> PROGRAM ID SEMI . declarations BEGIN statements END DOT
    (2) declarations -> . VAR var_declaration_list
    (3) declarations -> . empty
    (50) empty -> .

    VAR             shift and go to state 6
    BEGIN           reduce using rule 50 (empty -> .)

    declarations                   shift and go to state 5
    empty                          shift and go to state 7

state 5

    (1) program -> PROGRAM ID SEMI declarations . BEGIN statements END DOT

    BEGIN           shift and go to state 8


state 6

    (2) declarations -> VAR . var_declaration_list
    (4) var_declaration_list -> . var_declaration_list var_declaration
    (5) var_declaration_list -> . var_declaration
    (6) var_declaration -> . id_list COLON type SEMI
    (7) id_list -> . ID
    (8) id_list -> . ID COMMA id_list

    ID              shift and go to state 12

    var_declaration_list           shift and go to state 9
    var_declaration                shift and go to state 10
    id_list                        shift and go to state 11

state 7

    (3) declarations -> empty .

    BEGIN           reduce using rule 3 (declarations -> empty .)


state 8

    (1) program -> PROGRAM ID SEMI declarations BEGIN . statements END DOT
    (12) statements -> . statements statement
    (13) statements -> . statement
    (14) statement -> . assignment_statement
    (15) statement -> . writeln_statement
    (16) statement -> . readln_statement
    (17) statement -> . for_statement
    (18) statement -> . SEMI
    (40) statement -> . BEGIN statements END
    (41) statement -> . IF expression THEN statement
    (42) statement -> . IF expression THEN statement ELSE statement
    (43) statement -> . WHILE expression DO statement
    (19) assignment_statement -> . ID ASSIGN expression SEMI
    (20) writeln_statement -> . WRITELN LPAREN writelist RPAREN SEMI
    (25) readln_statement -> . READLN LPAREN ID RPAREN SEMI
    (26) for_statement -> . FOR ID ASSIGN expression TO expression DO statement

    SEMI            shift and go to state 14
    BEGIN           shift and go to state 15
    IF              shift and go to state 22
    WHILE           shift and go to state 23
    ID              shift and go to state 13
    WRITELN         shift and go to state 24
    READLN          shift and go to state 25
    FOR             shift and go to state 26

    statements                     shift and go to state 16
    statement                      shift and go to state 17
    assignment_statement           shift and go to state 18
    writeln_statement              shift and go to state 19
    readln_statement               shift and go to state 20
    for_statement                  shift and go to state 21

state 9

    (2) declarations -> VAR var_declaration_list .
    (4) var_declaration_list -> var_declaration_list . var_declaration
    (6) var_declaration -> . id_list COLON type SEMI
    (7) id_list -> . ID
    (8) id_list -> . ID COMMA id_list

    BEGIN           reduce using rule 2 (declarations -> VAR var_declaration_list .)
    ID              shift and go to state 12

    var_declaration                shift and go to state 27
    id_list                        shift and go to state 11

state 10

    (5) var_declaration_list -> var_declaration .

    ID              reduce using rule 5 (var_declaration_list -> var_declaration .)
    BEGIN           reduce using rule 5 (var_declaration_list -> var_declaration .)


state 11

    (6) var_declaration -> id_list . COLON type SEMI

    COLON           shift and go to state 28


state 12

    (7) id_list -> ID .
    (8) id_list -> ID . COMMA id_list

    COLON           reduce using rule 7 (id_list -> ID .)
    COMMA           shift and go to state 29


state 13

    (19) assignment_statement -> ID . ASSIGN expression SEMI

    ASSIGN          shift and go to state 30


state 14

    (18) statement -> SEMI .

    END             reduce using rule 18 (statement -> SEMI .)
    SEMI            reduce using rule 18 (statement -> SEMI .)
    BEGIN           reduce using rule 18 (statement -> SEMI .)
    IF              reduce using rule 18 (statement -> SEMI .)
    WHILE           reduce using rule 18 (statement -> SEMI .)
    ID              reduce using rule 18 (statement -> SEMI .)
    WRITELN         reduce using rule 18 (statement -> SEMI .)
    READLN          reduce using rule 18 (statement -> SEMI .)
    FOR             reduce using rule 18 (statement -> SEMI .)
    ELSE            reduce using rule 18 (statement -> SEMI .)


state 15

    (40) statement -> BEGIN . statements END
    (12) statements -> . statements statement
    (13) statements -> . statement
    (14) statement -> . assignment_statement
    (15) statement -> . writeln_statement
    (16) statement -> . readln_statement
    (17) statement -> . for_statement
    (18) statement -> . SEMI
    (40) statement -> . BEGIN statements END
    (41) statement -> . IF expression THEN statement
    (42) statement -> . IF expression THEN statement ELSE statement
    (43) statement -> . WHILE expression DO statement
    (19) assignment_statement -> . ID ASSIGN expression SEMI
    (20) writeln_statement -> . WRITELN LPAREN writelist RPAREN SEMI
    (25) readln_statement -> . READLN LPAREN ID RPAREN SEMI
    (26) for_statement -> . FOR ID ASSIGN expression TO expression DO statement

    SEMI            shift and go to state 14
    BEGIN           shift and go to state 15
    IF              shift and go to state 22
    WHILE           shift and go to state 23
    ID              shift and go to state 13
    WRITELN         shift and go to state 24
    READLN          shift and go to state 25
    FOR             shift and go to state 26

    statements                     shift and go to state 31
    statement                      shift and go to state 17
    assignment_statement           shift and go to state 18
    writeln_statement              shift and go to state 19
    readln_statement               shift and go to state 20
    for_statement                  shift and go to state 21

state 16

    (1) program -> PROGRAM ID SEMI declarations BEGIN statements . END DOT
    (12) statements -> statements . statement
    (14) statement -> . assignment_statement
    (15) statement -> . writeln_statement
    (16) statement -> . readln_statement
    (17) statement -> . for_statement
    (18) statement -> . SEMI
    (40) statement -> . BEGIN statements END
    (41) statement -> . IF expression THEN statement
    (42) statement -> . IF expression THEN statement ELSE statement
    (43) statement -> . WHILE expression DO statement
    (19) assignment_statement -> . ID ASSIGN expression SEMI
    (20) writeln_statement -> . WRITELN LPAREN writelist RPAREN SEMI
    (25) readln_statement -> . READLN LPAREN ID RPAREN SEMI
    (26) for_statement -> . FOR ID ASSIGN expression TO expression DO statement

    END             shift and go to state 32
    SEMI            shift and go to state 14
    BEGIN           shift and go to state 15
    IF              shift and go to state 22
    WHILE           shift and go to state 23
    ID              shift and go to state 13
    WRITELN         shift and go to state 24
    READLN          shift and go to state 25
    FOR             shift and go to state 26

    statement                      shift and go to state 33
    assignment_statement           shift and go to state 18
    writeln_statement              shift and go to state 19
    readln_statement               shift and go to state 20
    for_statement                  shift and go to state 21

state 17

    (13) statements -> statement .

    END             reduce using rule 13 (statements -> statement .)
    SEMI            reduce using rule 13 (statements -> statement .)
    BEGIN           reduce using rule 13 (statements -> statement .)
    IF              reduce using rule 13 (statements -> statement .)
    WHILE           reduce using rule 13 (statements -> statement .)
    ID              reduce using rule 13 (statements -> statement .)
    WRITELN         reduce using rule 13 (statements -> statement .)
    READLN          reduce using rule 13 (statements -> statement .)
    FOR             reduce using rule 13 (statements -> statement .)


state 18

    (14) statement -> assignment_statement .

    END             reduce using rule 14 (statement -> assignment_statement .)
    SEMI            reduce using rule 14 (statement -> assignment_statement .)
    BEGIN           reduce using rule 14 (statement -> assignment_statement .)
    IF              reduce using rule 14 (statement -> assignment_statement .)
    WHILE           reduce using rule 14 (statement -> assignment_statement .)
    ID              reduce using rule 14 (statement -> assignment_statement .)
    WRITELN         reduce using rule 14 (statement -> assignment_statement .)
    READLN          reduce using rule 14 (statement -> assignment_statement .)
    FOR             reduce using rule 14 (statement -> assignment_statement .)
    ELSE            reduce using rule 14 (statement -> assignment_statement .)


state 19

    (15) statement -> writeln_statement .

    END             reduce using rule 15 (statement -> writeln_statement .)
    SEMI            reduce using rule 15 (statement -> writeln_statement .)
    BEGIN           reduce using rule 15 (statement -> writeln_statement .)
    IF              reduce using rule 15 (statement -> writeln_statement .)
    WHILE           reduce using rule 15 (statement -> writeln_statement .)
    ID              reduce using rule 15 (statement -> writeln_statement .)
    WRITELN         reduce using rule 15 (statement -> writeln_statement .)
    READLN          reduce using rule 15 (statement -> writeln_statement .)
    FOR             reduce using rule 15 (statement -> writeln_statement .)
    ELSE            reduce using rule 15 (statement -> writeln_statement .)


state 20

    (16) statement -> readln_statement .

    END             reduce using rule 16 (statement -> readln_statement .)
    SEMI            reduce using rule 16 (statement -> readln_statement .)
    BEGIN           reduce using rule 16 (statement -> readln_statement .)
    IF              reduce using rule 16 (statement -> readln_statement .)
    WHILE           reduce using rule 16 (statement -> readln_statement .)
    ID              reduce using rule 16 (statement -> readln_statement .)
    WRITELN         reduce using rule 16 (statement -> readln_statement .)
    READLN          reduce using rule 16 (statement -> readln_statement .)
    FOR             reduce using rule 16 (statement -> readln_statement .)
    ELSE            reduce using rule 16 (statement -> readln_statement .)


state 21

    (17) statement -> for_statement .

    END             reduce using rule 17 (statement -> for_statement .)
    SEMI            reduce using rule 17 (statement -> for_statement .)
    BEGIN           reduce using rule 17 (statement -> for_statement .)
    IF              reduce using rule 17 (statement -> for_statement .)
    WHILE           reduce using rule 17 (statement -> for_statement .)
    ID              reduce using rule 17 (statement -> for_statement .)
    WRITELN         reduce using rule 17 (statement -> for_statement .)
    READLN          reduce using rule 17 (statement -> for_statement .)
    FOR             reduce using rule 17 (statement -> for_statement .)
    ELSE            reduce using rule 17 (statement -> for_statement .)


state 22

    (41) statement -> IF . expression THEN statement
    (42) statement -> IF . expression THEN statement ELSE statement
    (27) expression -> . TRUE
    (28) expression -> . FALSE
    (29) expression -> . expression AND expression
    (30) expression -> . expression OR expression
    (31) expression -> . expression LT expression
    (32) expression -> . expression LE expression
    (33) expression -> . expression GT expression
    (34) expression -> . expression GE expression
    (35) expression -> . expression EQ expression
    (36) expression -> . expression NEQ expression
    (37) expression -> . LPAREN expression RPAREN
    (38) expression -> . expression DIV expression
    (39) expression -> . expression MOD expression
    (44) expression -> . expression PLUS expression
    (45) expression -> . expression MINUS expression
    (46) expression -> . expression TIMES expression
    (47) expression -> . expression DIVIDE expression
    (48) expression -> . NUMBER
    (49) expression -> . ID

    TRUE            shift and go to state 35
    FALSE           shift and go to state 36
    LPAREN          shift and go to state 37
    NUMBER          shift and go to state 38
    ID              shift and go to state 39

    expression                     shift and go to state 34

state 23

    (43) statement -> WHILE . expression DO statement
    (27) expression -> . TRUE
    (28) expression -> . FALSE
    (29) expression -> . expression AND expression
    (30) expression -> . expression OR expression
    (31) expression -> . expression LT expression
    (32) expression -> . expression LE expression
    (33) expression -> . expression GT expression
    (34) expression -> . expression GE expression
    (35) expression -> . expression EQ expression
    (36) expression -> . expression NEQ expression
    (37) expression -> . LPAREN expression RPAREN
    (38) expression -> . expression DIV expression
    (39) expression -> . expression MOD expression
    (44) expression -> . expression PLUS expression
    (45) expression -> . expression MINUS expression
    (46) expression -> . expression TIMES expression
    (47) expression -> . expression DIVIDE expression
    (48) expression -> . NUMBER
    (49) expression -> . ID

    TRUE            shift and go to state 35
    FALSE           shift and go to state 36
    LPAREN          shift and go to state 37
    NUMBER          shift and go to state 38
    ID              shift and go to state 39

    expression                     shift and go to state 40

state 24

    (20) writeln_statement -> WRITELN . LPAREN writelist RPAREN SEMI

    LPAREN          shift and go to state 41


state 25

    (25) readln_statement -> READLN . LPAREN ID RPAREN SEMI

    LPAREN          shift and go to state 42


state 26

    (26) for_statement -> FOR . ID ASSIGN expression TO expression DO statement

    ID              shift and go to state 43


state 27

    (4) var_declaration_list -> var_declaration_list var_declaration .

    ID              reduce using rule 4 (var_declaration_list -> var_declaration_list var_declaration .)
    BEGIN           reduce using rule 4 (var_declaration_list -> var_declaration_list var_declaration .)


state 28

    (6) var_declaration -> id_list COLON . type SEMI
    (9) type -> . INTEGER
    (10) type -> . BOOLEAN
    (11) type -> . STRING

    INTEGER         shift and go to state 45
    BOOLEAN         shift and go to state 46
    STRING          shift and go to state 47

    type                           shift and go to state 44

state 29

    (8) id_list -> ID COMMA . id_list
    (7) id_list -> . ID
    (8) id_list -> . ID COMMA id_list

    ID              shift and go to state 12

    id_list                        shift and go to state 48

state 30

    (19) assignment_statement -> ID ASSIGN . expression SEMI
    (27) expression -> . TRUE
    (28) expression -> . FALSE
    (29) expression -> . expression AND expression
    (30) expression -> . expression OR expression
    (31) expression -> . expression LT expression
    (32) expression -> . expression LE expression
    (33) expression -> . expression GT expression
    (34) expression -> . expression GE expression
    (35) expression -> . expression EQ expression
    (36) expression -> . expression NEQ expression
    (37) expression -> . LPAREN expression RPAREN
    (38) expression -> . expression DIV expression
    (39) expression -> . expression MOD expression
    (44) expression -> . expression PLUS expression
    (45) expression -> . expression MINUS expression
    (46) expression -> . expression TIMES expression
    (47) expression -> . expression DIVIDE expression
    (48) expression -> . NUMBER
    (49) expression -> . ID

    TRUE            shift and go to state 35
    FALSE           shift and go to state 36
    LPAREN          shift and go to state 37
    NUMBER          shift and go to state 38
    ID              shift and go to state 39

    expression                     shift and go to state 49

state 31

    (40) statement -> BEGIN statements . END
    (12) statements -> statements . statement
    (14) statement -> . assignment_statement
    (15) statement -> . writeln_statement
    (16) statement -> . readln_statement
    (17) statement -> . for_statement
    (18) statement -> . SEMI
    (40) statement -> . BEGIN statements END
    (41) statement -> . IF expression THEN statement
    (42) statement -> . IF expression THEN statement ELSE statement
    (43) statement -> . WHILE expression DO statement
    (19) assignment_statement -> . ID ASSIGN expression SEMI
    (20) writeln_statement -> . WRITELN LPAREN writelist RPAREN SEMI
    (25) readln_statement -> . READLN LPAREN ID RPAREN SEMI
    (26) for_statement -> . FOR ID ASSIGN expression TO expression DO statement

    END             shift and go to state 50
    SEMI            shift and go to state 14
    BEGIN           shift and go to state 15
    IF              shift and go to state 22
    WHILE           shift and go to state 23
    ID              shift and go to state 13
    WRITELN         shift and go to state 24
    READLN          shift and go to state 25
    FOR             shift and go to state 26

    statement                      shift and go to state 33
    assignment_statement           shift and go to state 18
    writeln_statement              shift and go to state 19
    readln_statement               shift and go to state 20
    for_statement                  shift and go to state 21

state 32

    (1) program -> PROGRAM ID SEMI declarations BEGIN statements END . DOT

    DOT             shift and go to state 51


state 33

    (12) statements -> statements statement .

    END             reduce using rule 12 (statements -> statements statement .)
    SEMI            reduce using rule 12 (statements -> statements statement .)
    BEGIN           reduce using rule 12 (statements -> statements statement .)
    IF              reduce using rule 12 (statements -> statements statement .)
    WHILE           reduce using rule 12 (statements -> statements statement .)
    ID              reduce using rule 12 (statements -> statements statement .)
    WRITELN         reduce using rule 12 (statements -> statements statement .)
    READLN          reduce using rule 12 (statements -> statements statement .)
    FOR             reduce using rule 12 (statements -> statements statement .)


state 34

    (41) statement -> IF expression . THEN statement
    (42) statement -> IF expression . THEN statement ELSE statement
    (29) expression -> expression . AND expression
    (30) expression -> expression . OR expression
    (31) expression -> expression . LT expression
    (32) expression -> expression . LE expression
    (33) expression -> expression . GT expression
    (34) expression -> expression . GE expression
    (35) expression -> expression . EQ expression
    (36) expression -> expression . NEQ expression
    (38) expression -> expression . DIV expression
    (39) expression -> expression . MOD expression
    (44) expression -> expression . PLUS expression
    (45) expression -> expression . MINUS expression
    (46) expression -> expression . TIMES expression
    (47) expression -> expression . DIVIDE expression

    THEN            shift and go to state 52
    AND             shift and go to state 53
    OR              shift and go to state 54
    LT              shift and go to state 55
    LE              shift and go to state 56
    GT              shift and go to state 57
    GE              shift and go to state 58
    EQ              shift and go to state 59
    NEQ             shift and go to state 60
    DIV             shift and go to state 61
    MOD             shift and go to state 62
    PLUS            shift and go to state 63
    MINUS           shift and go to state 64
    TIMES           shift and go to state 65
    DIVIDE          shift and go to state 66


state 35

    (27) expression -> TRUE .

    THEN            reduce using rule 27 (expression -> TRUE .)
    AND             reduce using rule 27 (expression -> TRUE .)
    OR              reduce using rule 27 (expression -> TRUE .)
    LT              reduce using rule 27 (expression -> TRUE .)
    LE              reduce using rule 27 (expression -> TRUE .)
    GT              reduce using rule 27 (expression -> TRUE .)
    GE              reduce using rule 27 (expression -> TRUE .)
    EQ              reduce using rule 27 (expression -> TRUE .)
    NEQ             reduce using rule 27 (expression -> TRUE .)
    DIV             reduce using rule 27 (expression -> TRUE .)
    MOD             reduce using rule 27 (expression -> TRUE .)
    PLUS            reduce using rule 27 (expression -> TRUE .)
    MINUS           reduce using rule 27 (expression -> TRUE .)
    TIMES           reduce using rule 27 (expression -> TRUE .)
    DIVIDE          reduce using rule 27 (expression -> TRUE .)
    DO              reduce using rule 27 (expression -> TRUE .)
    SEMI            reduce using rule 27 (expression -> TRUE .)
    RPAREN          reduce using rule 27 (expression -> TRUE .)
    COMMA           reduce using rule 27 (expression -> TRUE .)
    TO              reduce using rule 27 (expression -> TRUE .)


state 36

    (28) expression -> FALSE .

    THEN            reduce using rule 28 (expression -> FALSE .)
    AND             reduce using rule 28 (expression -> FALSE .)
    OR              reduce using rule 28 (expression -> FALSE .)
    LT              reduce using rule 28 (expression -> FALSE .)
    LE              reduce using rule 28 (expression -> FALSE .)
    GT              reduce using rule 28 (expression -> FALSE .)
    GE              reduce using rule 28 (expression -> FALSE .)
    EQ              reduce using rule 28 (expression -> FALSE .)
    NEQ             reduce using rule 28 (expression -> FALSE .)
    DIV             reduce using rule 28 (expression -> FALSE .)
    MOD             reduce using rule 28 (expression -> FALSE .)
    PLUS            reduce using rule 28 (expression -> FALSE .)
    MINUS           reduce using rule 28 (expression -> FALSE .)
    TIMES           reduce using rule 28 (expression -> FALSE .)
    DIVIDE          reduce using rule 28 (expression -> FALSE .)
    DO              reduce using rule 28 (expression -> FALSE .)
    SEMI            reduce using rule 28 (expression -> FALSE .)
    RPAREN          reduce using rule 28 (expression -> FALSE .)
    COMMA           reduce using rule 28 (expression -> FALSE .)
    TO              reduce using rule 28 (expression -> FALSE .)


state 37

    (37) expression -> LPAREN . expression RPAREN
    (27) expression -> . TRUE
    (28) expression -> . FALSE
    (29) expression -> . expression AND expression
    (30) expression -> . expression OR expression
    (31) expression -> . expression LT expression
    (32) expression -> . expression LE expression
    (33) expression -> . expression GT expression
    (34) expression -> . expression GE expression
    (35) expression -> . expression EQ expression
    (36) expression -> . expression NEQ expression
    (37) expression -> . LPAREN expression RPAREN
    (38) expression -> . expression DIV expression
    (39) expression -> . expression MOD expression
    (44) expression -> . expression PLUS expression
    (45) expression -> . expression MINUS expression
    (46) expression -> . expression TIMES expression
    (47) expression -> . expression DIVIDE expression
    (48) expression -> . NUMBER
    (49) expression -> . ID

    TRUE            shift and go to state 35
    FALSE           shift and go to state 36
    LPAREN          shift and go to state 37
    NUMBER          shift and go to state 38
    ID              shift and go to state 39

    expression                     shift and go to state 67

state 38

    (48) expression -> NUMBER .

    THEN            reduce using rule 48 (expression -> NUMBER .)
    AND             reduce using rule 48 (expression -> NUMBER .)
    OR              reduce using rule 48 (expression -> NUMBER .)
    LT              reduce using rule 48 (expression -> NUMBER .)
    LE              reduce using rule 48 (expression -> NUMBER .)
    GT              reduce using rule 48 (expression -> NUMBER .)
    GE              reduce using rule 48 (expression -> NUMBER .)
    EQ              reduce using rule 48 (expression -> NUMBER .)
    NEQ             reduce using rule 48 (expression -> NUMBER .)
    DIV             reduce using rule 48 (expression -> NUMBER .)
    MOD             reduce using rule 48 (expression -> NUMBER .)
    PLUS            reduce using rule 48 (expression -> NUMBER .)
    MINUS           reduce using rule 48 (expression -> NUMBER .)
    TIMES           reduce using rule 48 (expression -> NUMBER .)
    DIVIDE          reduce using rule 48 (expression -> NUMBER .)
    DO              reduce using rule 48 (expression -> NUMBER .)
    SEMI            reduce using rule 48 (expression -> NUMBER .)
    RPAREN          reduce using rule 48 (expression -> NUMBER .)
    COMMA           reduce using rule 48 (expression -> NUMBER .)
    TO              reduce using rule 48 (expression -> NUMBER .)


state 39

    (49) expression -> ID .

    THEN            reduce using rule 49 (expression -> ID .)
    AND             reduce using rule 49 (expression -> ID .)
    OR              reduce using rule 49 (expression -> ID .)
    LT              reduce using rule 49 (expression -> ID .)
    LE              reduce using rule 49 (expression -> ID .)
    GT              reduce using rule 49 (expression -> ID .)
    GE              reduce using rule 49 (expression -> ID .)
    EQ              reduce using rule 49 (expression -> ID .)
    NEQ             reduce using rule 49 (expression -> ID .)
    DIV             reduce using rule 49 (expression -> ID .)
    MOD             reduce using rule 49 (expression -> ID .)
    PLUS            reduce using rule 49 (expression -> ID .)
    MINUS           reduce using rule 49 (expression -> ID .)
    TIMES           reduce using rule 49 (expression -> ID .)
    DIVIDE          reduce using rule 49 (expression -> ID .)
    DO              reduce using rule 49 (expression -> ID .)
    SEMI            reduce using rule 49 (expression -> ID .)
    RPAREN          reduce using rule 49 (expression -> ID .)
    COMMA           reduce using rule 49 (expression -> ID .)
    TO              reduce using rule 49 (expression -> ID .)


state 40

    (43) statement -> WHILE expression . DO statement
    (29) expression -> expression . AND expression
    (30) expression -> expression . OR expression
    (31) expression -> expression . LT expression
    (32) expression -> expression . LE expression
    (33) expression -> expression . GT expression
    (34) expression -> expression . GE expression
    (35) expression -> expression . EQ expression
    (36) expression -> expression . NEQ expression
    (38) expression -> expression . DIV expression
    (39) expression -> expression . MOD expression
    (44) expression -> expression . PLUS expression
    (45) expression -> expression . MINUS expression
    (46) expression -> expression . TIMES expression
    (47) expression -> expression . DIVIDE expression

    DO              shift and go to state 68
    AND             shift and go to state 53
    OR              shift and go to state 54
    LT              shift and go to state 55
    LE              shift and go to state 56
    GT              shift and go to state 57
    GE              shift and go to state 58
    EQ              shift and go to state 59
    NEQ             shift and go to state 60
    DIV             shift and go to state 61
    MOD             shift and go to state 62
    PLUS            shift and go to state 63
    MINUS           shift and go to state 64
    TIMES           shift and go to state 65
    DIVIDE          shift and go to state 66


state 41

    (20) writeln_statement -> WRITELN LPAREN . writelist RPAREN SEMI
    (21) writelist -> . writelist COMMA writeitem
    (22) writelist -> . writeitem
    (23) writeitem -> . STRING_LITERAL
    (24) writeitem -> . expression
    (27) expression -> . TRUE
    (28) expression -> . FALSE
    (29) expression -> . expression AND expression
    (30) expression -> . expression OR expression
    (31) expression -> . expression LT expression
    (32) expression -> . expression LE expression
    (33) expression -> . expression GT expression
    (34) expression -> . expression GE expression
    (35) expression -> . expression EQ expression
    (36) expression -> . expression NEQ expression
    (37) expression -> . LPAREN expression RPAREN
    (38) expression -> . expression DIV expression
    (39) expression -> . expression MOD expression
    (44) expression -> . expression PLUS expression
    (45) expression -> . expression MINUS expression
    (46) expression -> . expression TIMES expression
    (47) expression -> . expression DIVIDE expression
    (48) expression -> . NUMBER
    (49) expression -> . ID

    STRING_LITERAL  shift and go to state 71
    TRUE            shift and go to state 35
    FALSE           shift and go to state 36
    LPAREN          shift and go to state 37
    NUMBER          shift and go to state 38
    ID              shift and go to state 39

    writelist                      shift and go to state 69
    writeitem                      shift and go to state 70
    expression                     shift and go to state 72

state 42

    (25) readln_statement -> READLN LPAREN . ID RPAREN SEMI

    ID              shift and go to state 73


state 43

    (26) for_statement -> FOR ID . ASSIGN expression TO expression DO statement

    ASSIGN          shift and go to state 74


state 44

    (6) var_declaration -> id_list COLON type . SEMI

    SEMI            shift and go to state 75


state 45

    (9) type -> INTEGER .

    SEMI            reduce using rule 9 (type -> INTEGER .)


state 46

    (10) type -> BOOLEAN .

    SEMI            reduce using rule 10 (type -> BOOLEAN .)


state 47

    (11) type -> STRING .

    SEMI            reduce using rule 11 (type -> STRING .)


state 48

    (8) id_list -> ID COMMA id_list .

    COLON           reduce using rule 8 (id_list -> ID COMMA id_list .)


state 49

    (19) assignment_statement -> ID ASSIGN expression . SEMI
    (29) expression -> expression . AND expression
    (30) expression -> expression . OR expression
    (31) expression -> expression . LT expression
    (32) expression -> expression . LE expression
    (33) expression -> expression . GT expression
    (34) expression -> expression . GE expression
    (35) expression -> expression . EQ expression
    (36) expression -> expression . NEQ expression
    (38) expression -> expression . DIV expression
    (39) expression -> expression . MOD expression
    (44) expression -> expression . PLUS expression
    (45) expression -> expression . MINUS expression
    (46) expression -> expression . TIMES expression
    (47) expression -> expression . DIVIDE expression

    SEMI            shift and go to state 76
    AND             shift and go to state 53
    OR              shift and go to state 54
    LT              shift and go to state 55
    LE              shift and go to state 56
    GT              shift and go to state 57
    GE              shift and go to state 58
    EQ              shift and go to state 59
    NEQ             shift and go to state 60
    DIV             shift and go to state 61
    MOD             shift and go to state 62
    PLUS            shift and go to state 63
    MINUS           shift and go to state 64
    TIMES           shift and go to state 65
    DIVIDE          shift and go to state 66


state 50

    (40) statement -> BEGIN statements END .

    END             reduce using rule 40 (statement -> BEGIN statements END .)
    SEMI            reduce using rule 40 (statement -> BEGIN statements END .)
    BEGIN           reduce using rule 40 (statement -> BEGIN statements END .)
    IF              reduce using rule 40 (statement -> BEGIN statements END .)
    WHILE           reduce using rule 40 (statement -> BEGIN statements END .)
    ID              reduce using rule 40 (statement -> BEGIN statements END .)
    WRITELN         reduce using rule 40 (statement -> BEGIN statements END .)
    READLN          reduce using rule 40 (statement -> BEGIN statements END .)
    FOR             reduce using rule 40 (statement -> BEGIN statements END .)
    ELSE            reduce using rule 40 (statement -> BEGIN statements END .)


state 51

    (1) program -> PROGRAM ID SEMI declarations BEGIN statements END DOT .

    $end            reduce using rule 1 (program -> PROGRAM ID SEMI declarations BEGIN statements END DOT .)


state 52

    (41) statement -> IF expression THEN . statement
    (42) statement -> IF expression THEN . statement ELSE statement
    (14) statement -> . assignment_statement
    (15) statement -> . writeln_statement
    (16) statement -> . readln_statement
    (17) statement -> . for_statement
    (18) statement -> . SEMI
    (40) statement -> . BEGIN statements END
    (41) statement -> . IF expression THEN statement
    (42) statement -> . IF expression THEN statement ELSE statement
    (43) statement -> . WHILE expression DO statement
    (19) assignment_statement -> . ID ASSIGN expression SEMI
    (20) writeln_statement -> . WRITELN LPAREN writelist RPAREN SEMI
    (25) readln_statement -> . READLN LPAREN ID RPAREN SEMI
    (26) for_statement -> . FOR ID ASSIGN expression TO expression DO statement
